manifests/1password/netpol-connect-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword-connect-operator
  namespace: 1password
spec:
  endpointSelector:
    matchLabels:
      name: onepassword-connect
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
